Kill for step up should use ErrorCodes::InterruptedDueToReplStateChange

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.0.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Replication
    • Fully Compatible
    • ALL
    • Repl 2024-03-18
    • 10
    • None
    • 3
    • None
    • None
    • None
    • None
    • None
    • None

      We kill all retryable write sessions and invalidate them during step-up. There usually won't be any active ones, but there are some edge cases (e.g. just checked out the session but hadn't taken the global lock at stepdown time) which result in some. This kill is done with the default ErrorCodes::Interrupted; it should be done with ErrorCodes::InterruptedDueToReplStateChange

            Assignee:
            Matthew Russotto
            Reporter:
            Matthew Russotto
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: