SERVER-87738 Kill for step up should use ErrorCodes::InterruptedDueToReplStateChange

GitOrigin-RevId: 276a8829b2550cc6f0cddf8194f185525b303b0b